# REST_API_Flask

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: coverage.yml  main.yml
src/: pyproject.toml
src/comp0034_coursework_1/: Rest.py  __init__.py  bp_delete.py  bp_get.py  bp_post.py  bp_put.py  comp0034-coursework1.docx  models.py  router.py  router1.py  router_1  schemas.py
src/comp0034_coursework_1/templates/: button_homepage_login.html  login.html  register.html
src/comp0034_coursework_1/tests/: conftest.py  test_delete_functions.py  test_get_functions.py  test_post_functions.py  test_put_functions.py
