[project]
name = "comp0034_coursework_1"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "pytest",
    "flask",
]

[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
